--- a/WebContent/css/estilos_formulario.css
+++ b/WebContent/css/estilos_formulario.css
@@ -3,6 +3,7 @@
 	/* border: 0;  no se verian ni las cajas de texto*/
 	margin: 0;
 	padding: 0;
+	text-align: center;
 }
 
 /* **************************************************************************************** */
@@ -22,7 +23,7 @@ body {
 	margin: 0em auto;
 	width: 80%;
 }
-h1 {
+h2 {
 	font-size: 1.5em;
 	margin-left: .5em;
 	text-shadow: 2px 2px 2px rgba(70, 70, 70, .9);
